view-all table alignment fixes, no more provider number

--- a/source/css/theme/_table.scss
+++ b/source/css/theme/_table.scss
@@ -28,7 +28,7 @@ th {
   font-size: 1em;
   font-weight: 800;
   padding: 0 12px 8px;
-  text-align: right;
+  text-align: left;
   vertical-align: middle;
 
   &:first-child {
@@ -43,7 +43,7 @@ th {
 td {
   font-size: .875em;
   padding: 8px 12px;
-  text-align: right;
+  text-align: left;
 
   &:first-child {
     text-align: left;
